# Hackathon2020

./: 2020-01-17.json  LICENSE.txt  README.md  index.html  responseSample.json  samplequery.txt  server.js  testing.py  testingFlightEngine.py
DialogWebRequest/: Procfile  flaskSampleHook.py  requirements.txt
DialogWebRequest/fleet-tracker/entities/: VehicleData.json  VehicleData_entries_en.json
DialogWebRequest/fleet-tracker/intents/: Default Fallback Intent.json  Default Welcome Intent.json  Vehicle Track.json  Vehicle Track_usersays_en.json
dialog_webrequest/: requirements.txt
dialog_webrequest/fleet-tracker/: agent.json
dialog_webrequest/fleet-tracker/intents/: Default Welcome Intent_usersays_en.json
fly-query-rs/: Cargo.toml
fly-query-rs/pkg/: fly_query_rs.d.ts  fly_query_rs.js  fly_query_rs_bg.d.ts  fly_query_rs_bg.wasm
fly-query-rs/src/: current_search.rs  flight_query.rs  lib.rs  lib0.rs
fly-query-tester/: Cargo.toml
fly-query-tester/src/: main.rs
react_website/src/pages/flights/: Flight.js
